{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 14,
  "lineage": "8c9e462d-0755-fcdd-ca76-68555d2f2c69",
  "resources": [
    {
      "module": "module.gems_infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "gem_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cbbe2c6a1bb2ad63",
            "arn": "arn:aws:ec2:us-east-1:831926582395:instance/i-08f131801351eef7c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f131801351eef7c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gem2_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09600b8beba6ed6e2",
            "private_dns": "ip-10-0-1-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.223",
            "public_ip": "3.88.53.249",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f2940b1397ec50f4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02d3d2ae43bc68486",
            "tags": {
              "Name": "gem-instance"
            },
            "tags_all": {
              "Name": "gem-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4f642cc53c04e31"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gems_infra.aws_key_pair.gem2_key",
            "module.gems_infra.aws_security_group.gems_sg",
            "module.gems_infra.aws_subnet.public_subnet",
            "module.gems_infra.aws_vpc.vpc-gems"
          ]
        }
      ]
    },
    {
      "module": "module.gems_infra",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-gems",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926582395:internet-gateway/igw-06b9f4a4944924797",
            "id": "igw-06b9f4a4944924797",
            "owner_id": "831926582395",
            "region": "us-east-1",
            "tags": {
              "Name": "igw-gems"
            },
            "tags_all": {
              "Name": "igw-gems"
            },
            "vpc_id": "vpc-0f61ff367a96b36a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gems_infra.aws_vpc.vpc-gems"
          ]
        }
      ]
    },
    {
      "module": "module.gems_infra",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926582395:route-table/rtb-086a0bdd5dffa16f7",
            "id": "rtb-086a0bdd5dffa16f7",
            "owner_id": "831926582395",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b9f4a4944924797",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f61ff367a96b36a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gems_infra.aws_internet_gateway.igw-gems",
            "module.gems_infra.aws_vpc.vpc-gems"
          ]
        }
      ]
    },
    {
      "module": "module.gems_infra",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02462bc19f58280ff",
            "region": "us-east-1",
            "route_table_id": "rtb-086a0bdd5dffa16f7",
            "subnet_id": "subnet-02d3d2ae43bc68486"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gems_infra.aws_internet_gateway.igw-gems",
            "module.gems_infra.aws_route_table.public_rt",
            "module.gems_infra.aws_subnet.public_subnet",
            "module.gems_infra.aws_vpc.vpc-gems"
          ]
        }
      ]
    },
    {
      "module": "module.gems_infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gems_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926582395:security-group/sg-0d4f642cc53c04e31",
            "description": "Security group for gems application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4f642cc53c04e31",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gems_sg",
            "name_prefix": "",
            "owner_id": "831926582395",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f61ff367a96b36a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.gems_infra.aws_vpc.vpc-gems"
          ]
        }
      ]
    },
    {
      "module": "module.gems_infra",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926582395:subnet/subnet-02d3d2ae43bc68486",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d3d2ae43bc68486",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "831926582395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0f61ff367a96b36a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.gems_infra.aws_vpc.vpc-gems"
          ]
        }
      ]
    },
    {
      "module": "module.gems_infra",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-gems",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:831926582395:vpc/vpc-0f61ff367a96b36a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc6bfb39b35bd360",
            "default_route_table_id": "rtb-0a4cb40e69be4bb61",
            "default_security_group_id": "sg-03fcd4df296a9f091",
            "dhcp_options_id": "dopt-0330192285d157224",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f61ff367a96b36a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4cb40e69be4bb61",
            "owner_id": "831926582395",
            "region": "us-east-1",
            "tags": {
              "Name": "vpc-gems"
            },
            "tags_all": {
              "Name": "vpc-gems"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}